--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -591,7 +591,20 @@
                     <td class="date"><a name="5th">Thu<br>9/27</a></td>
                     <td class="papers">
                         <ul>
-
+                            <li>
+                            <b>
+                            <a class="paperlink" href="http://web.engr.illinois.edu/~lexu1/" target="_blank">Le</a> will lead the discussion.
+                            </b>
+                            <p></p>
+                            </li>
+                            <li> J. Li, Y. Chen, H. Liu, S. Lu, Y. Zhang,
+                              H. S. Gunawi, X. Gu, X. Lu, and D. Lu,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/eurosys18.pdf" target="_blank">PCatch:
+                                  Automatically Detecting Performance Cascading Bugs
+                                  in Cloud Systems</a>,
+                                  In Proceedings of the 2018 European Conference on Computer Systems (EuroSys '18), April 2018.
+                                  <p></p>
+                            </li>
                             <li> M. Attariyan, M. Chow, and J. Flinn,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-33.pdf" target="_blank">X-ray:
                                   Automating Root-Cause Diagnosis of Performance
@@ -601,12 +614,23 @@
                                   (OSDI '12), November 2012.
                                 <p></p>
                             </li>
-                            <li> J. Li, Y. Chen, H. Liu, S. Lu, Y. Zhang,
-                              H. S. Gunawi, X. Gu, X. Lu, and D. Lu,
-                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/eurosys18.pdf" target="_blank">PCatch:
-                                  Automatically Detecting Performance Cascading Bugs
-                                  in Cloud Systems</a>,
-                                  In Proceedings of the 2018 European Conference on Computer Systems (EuroSys '18), April 2018.
+                            <li> (Optional) X-ray and PCatch are built on top of the following papers:
+                                 <p></p>
+                              <ul>
+                                  <li> H. Liu, G. Li, J. F. Lukman, J. Li, S. Lu, H. S. Gunawi, and C. Tian,
+                                    <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/asplos17-preprint.pdf" target="_blank">
+                                      DCatch: Automatically Detecting Distributed Concurrency Bugs in Cloud Systems </a>,
+                                      In Proceedings of the
+                                      22nd ACM International Conference on Architectural Support
+                                      for Programming Languages and Operating Systems (ASPLOS '17), April 2017.
+                                    <p></p>
+                                  </li>
+                                  <li>M. Attariyan and J. Flinn,
+                                    <a class="paperlink" href="http://lethe.eecs.umich.edu/papers/confaid.pdf" target="_blank">Automating configuration troubleshooting with dynamic information flow analysis</a>,
+                                    In Proceedings of the 9th USENIX Conference on Operating Systems Design and Implementation (OSDI '10), October 2010.
+                                    <p></p>
+                                  </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
@@ -618,8 +642,7 @@
                         <ul>
                             <li>
                               <b>
-                              <a class="paperlink" href="http://web.engr.illinois.edu/~lexu1/" target="_blank">Le</a>
-                              and <a class="paperlink" href="http://ry2.web.engr.illinois.edu/" target="_blank">Rui</a> will lead the discussion.
+                              <a class="paperlink" href="http://ry2.web.engr.illinois.edu/" target="_blank">Rui</a> will lead the discussion.
                               </b>
                               <p></p>
                             </li>
