--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -593,7 +593,7 @@
                         <ul>
                             <li>
                             <b>
-                            <a class="paperlink" href="http://web.engr.illinois.edu/~lexu1/" target="_blank">Le</a> will lead the discussion.
+                            <a class="paperlink" href="http://web.engr.illinois.edu/~lexu1/" target="_blank">Le</a> will lead the discussion of PCatch.
                             </b>
                             <p></p>
                             </li>
@@ -642,7 +642,7 @@
                         <ul>
                             <li>
                               <b>
-                              <a class="paperlink" href="http://ry2.web.engr.illinois.edu/" target="_blank">Rui</a> will lead the discussion.
+                              <a class="paperlink" href="http://ry2.web.engr.illinois.edu/" target="_blank">Rui</a> will lead the discussion of iTask.
                               </b>
                               <p></p>
                             </li>
