remove the 1-page limit

--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -24,7 +24,7 @@
             </ul>
         </li>
         <li>
-            <b><font color="black">9/14 (Fri) 8:00am:</font> Submit project proposal (1 page) </b>
+            <b><font color="black">9/14 (Fri) 8:00am:</font> Submit project proposal </b>
             <br>
             <ul>
                 <li>
@@ -33,7 +33,7 @@
             </ul>
         </li>
         <li>
-            <b><font color="red">10/12 (Fri) 8:00am:</font> first checkpoint report (1 page) </b>
+            <b><font color="red">10/12 (Fri) 8:00am:</font> first checkpoint report </b>
             <br>
             <ul>
                 <li>
@@ -46,7 +46,7 @@
             </ul>
         </li>
         <li>
-            <b><font color="black">11/9 (Fri) 8:00am:</font> second checkpoint report (1 page) </b>
+            <b><font color="black">11/9 (Fri) 8:00am:</font> second checkpoint report </b>
             <br>
             <ul>
                 <li>
