add symposium for cp 2

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -11,7 +11,7 @@
 
 <body class="main">
 
-    <h1>CS 598: Reading List and Schedule (Tentative)</h1>
+    <h1>CS 598: Schedule and Readings</h1>
     <h2 class="h1sub">Fall 2018</h2>
 
     <center>
@@ -779,7 +779,7 @@
         </table>
 
 
-        <h2>Project Symposium</h2>
+        <h2>Project Symposium (Checkpoint 1)</h2>
 
         <table>
             <tbody>
@@ -1032,12 +1032,41 @@
             </tbody>
         </table>
 
-        <h2>Troubleshooting</h2>
+        <h2>Project Symposium (Checkpoint 2)</h2>
 
         <table>
             <tbody>
                 <tr>
                     <td class="date"><a name="12tu">Tue<br>11/13</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> Session 1</font>
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="date"><a name="12th">Thu<br>11/15</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> Session 2</font>
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Troubleshooting</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="13tu">Tue<br>11/27</a></td>
                     <td class="papers">
                         <ul>
 
@@ -1062,7 +1091,7 @@
                 </tr>
 
                 <tr>
-                    <td class="date"><a name="12th">Thu<br>11/15</a></td>
+                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
                     <td class="papers">
                         <ul>
 
@@ -1088,7 +1117,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="13tu">Tue<br>11/27</a></td>
+                    <td class="date"><a name="14tu">Tue<br>12/4</a></td>
 
                     <td class="papers">
                         <ul>
@@ -1100,71 +1129,6 @@
                             <li>
                                 TBD
                             </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h2>Formal Verification</h2>
-
-        <table>
-            <tbody>
-                <tr>
-                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
-
-                    <td class="papers">
-                        <ul>
-                            <li>C. Newcombe, T. Rath, F. Zhang, B. Munteanu, M. Brooker, and M. Deardeuff,
-                                <a class="paperlink" href="https://cacm.acm.org/magazines/2015/4/184701-how-amazon-web-services-uses-formal-methods/abstract" target="_blank">How
-         Amazon Web Services Uses Formal Methods</a>, Communications of the ACM (CACM), Vol. 58 No. 4, Pages 66-73, April 2015.
-                                <p></p>
-                            </li>
-                            <li> C. Hawblitzel, J. Howell, M. Kapritsos, J. R. Lorch, B. Parno, M. L. Roberts, S. Setty, and B. Zill,
-                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/250-hawblitzel.pdf" target="_blank">IronFleet:
-                                  Proving Practical Distributed Systems Correct</a>,
-                                In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
-                                <p></p>
-                            </li>
-                            <li> (Optional) related papers on verified systems:
-                                 <p></p>
-                              <ul>
-                                <li>P. Fonseca, K. Zhang, X. Wang, and A. Krishnamurthy,
-                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?doid=3064176.3064183" target="_blank">An Empirical Study on the Correctness of
-                                    Formally Verified Distributed Systems</a>,
-                                In Proceedings of the 2017 European Conference on Computer Systems (EuroSys '17), April 2017.
-                                  <p></p>
-                                </li>
-                              </ul>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h2>Client-side Reliability</h2>
-
-        <table>
-            <tbody>
-                <tr>
-                    <td class="date"><a name="14tu">Tue<br>12/4</a></td>
-
-                    <td class="papers">
-                        <ul>
-                            <li> P. Huang, T. Xu, X. Jin, and Y. Zhou,
-                              <a class="paperlink" href="https://www.cs.jhu.edu/~huang/paper/defdroid-mobisys16.pdf" target="_blank">DefDroid:
-       Towards a More Defensive Mobile OS
-       Against Disruptive App Behavior</a>, In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (MobiSys '16), June 2016.
-                            <p></p>
-                            </li>
-                            <li> X. Ma, P. Huang, X. Jin, P. Wang, S. Park, D. Shen, Y. Zhou, L. K. Saul, and G. M. Voelker,
-                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/nsdi13/nsdi13-final198.pdf">eDoctor:
-         Automatically Diagnosing Abnormal Battery Drain
-         Issues on Smartphones</a>, In Proceedings of the 10th USENIX Symposium on Networked Systems Design and Implementation (NSDI '13), April 2013.
-                                <p></p>
-                            </li>
-                            <li> TBD </li>
                         </ul>
                     </td>
                 </tr>
@@ -1197,6 +1161,75 @@
                 </tr>
             </tbody>
         </table>
+
+        <h2>(Queuing) Formal Verification</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><!--<a name="13th">Thu<br>11/29</a>-->TBD</td>
+
+                    <td class="papers">
+                        <ul>
+                            <li>C. Newcombe, T. Rath, F. Zhang, B. Munteanu, M. Brooker, and M. Deardeuff,
+                                <a class="paperlink" href="https://cacm.acm.org/magazines/2015/4/184701-how-amazon-web-services-uses-formal-methods/abstract" target="_blank">How
+         Amazon Web Services Uses Formal Methods</a>, Communications of the ACM (CACM), Vol. 58 No. 4, Pages 66-73, April 2015.
+                                <p></p>
+                            </li>
+                            <li> C. Hawblitzel, J. Howell, M. Kapritsos, J. R. Lorch, B. Parno, M. L. Roberts, S. Setty, and B. Zill,
+                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/250-hawblitzel.pdf" target="_blank">IronFleet:
+                                  Proving Practical Distributed Systems Correct</a>,
+                                In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
+                                <p></p>
+                            </li>
+                            <li> (Optional) related papers on verified systems:
+                                 <p></p>
+                              <ul>
+                                <li>P. Fonseca, K. Zhang, X. Wang, and A. Krishnamurthy,
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?doid=3064176.3064183" target="_blank">An Empirical Study on the Correctness of
+                                    Formally Verified Distributed Systems</a>,
+                                In Proceedings of the 2017 European Conference on Computer Systems (EuroSys '17), April 2017.
+                                  <p></p>
+                                </li>
+                              </ul>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+<!--
+
+        <h2>(Queuing) Client-side Reliability</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="14tu">Tue<br>12/4</a></td>
+
+                    <td class="papers">
+                        <ul>
+                            <li> P. Huang, T. Xu, X. Jin, and Y. Zhou,
+                              <a class="paperlink" href="https://www.cs.jhu.edu/~huang/paper/defdroid-mobisys16.pdf" target="_blank">DefDroid:
+       Towards a More Defensive Mobile OS
+       Against Disruptive App Behavior</a>, In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (MobiSys '16), June 2016.
+                            <p></p>
+                            </li>
+                            <li> X. Ma, P. Huang, X. Jin, P. Wang, S. Park, D. Shen, Y. Zhou, L. K. Saul, and G. M. Voelker,
+                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/nsdi13/nsdi13-final198.pdf">eDoctor:
+         Automatically Diagnosing Abnormal Battery Drain
+         Issues on Smartphones</a>, In Proceedings of the 10th USENIX Symposium on Networked Systems Design and Implementation (NSDI '13), April 2013.
+                                <p></p>
+                            </li>
+                            <li> TBD </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+      -->
 
     </div>
 
