--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -43,6 +43,10 @@
                     For study-based projects, you must show general statistics of your datasets,
                     and concrete examples or case studies.
                 </li>
+                <li>
+                    You will be presenting your checkpoint-1 results in class at
+                    <a class="paperlink" href="readings.html#7th" target="_blank">10/16 and 10/18<a>.
+                </li>
             </ul>
         </li>
         <li>
@@ -54,6 +58,10 @@
                 </li>
                 <li>
                     For study-based projects, you must show your numbers and findings.
+                </li>
+                <li>
+                    You will be presenting your checkpoint-2 results in class at
+                    <a class="paperlink" href="readings.html#11th" target="_blank">11/13 and 11/15</a>.
                 </li>
             </ul>
         </li>
