--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -788,7 +788,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1</font>
+                            <li> Session 1: Each team will do a 6min presentation.
                             </li>
                         </ul>
 
@@ -799,7 +799,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2</font>
+                            <li> Session 2: Each team will do a 6min presentation.
                             </li>
                         </ul>
 
@@ -1041,7 +1041,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1</font>
+                            <li> Session 1: Each team will do a 8min presentation.</font>
                             </li>
                         </ul>
 
@@ -1052,7 +1052,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2</font>
+                            <li> Session 1: Each team will do a 8min presentation.</font>
                             </li>
                         </ul>
 
@@ -1144,7 +1144,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1 </li>
+                            <li> Session 1: Each team will do a 15min presentation. </li>
                         </ul>
 
                     </td>
@@ -1154,7 +1154,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2 </li>
+                            <li> Session 2: Each team will do a 15min presentation. </li>
                         </ul>
 
                     </td>
