--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     You will be presenting your checkpoint-1 results in class at
-                    <a class="paperlink" href="readings.html#7th" target="_blank">10/16 and 10/18<a>.
+                    <a class="paperlink" href="readings.html#7th" target="_blank">10/16 and 10/18</a>.
                 </li>
             </ul>
         </li>
