--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -788,7 +788,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1: Each team will do a 6min presentation.
+                            <li> Session 1: Each team will do a 6 minute
+                                 presentation (plus 4 minute QA).
                             </li>
                         </ul>
 
@@ -799,7 +800,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2: Each team will do a 6min presentation.
+                            <li> Session 2: Each team will do a 6 minute
+                                 presentation (plus 4 minute QA).
                             </li>
                         </ul>
 
@@ -1041,7 +1043,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1: Each team will do a 7min presentation.</font>
+                            <li> Session 1: Each team will do a 7 minute
+                                 presentation (plus 3 minute QA).</font>
                             </li>
                         </ul>
 
@@ -1052,7 +1055,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2: Each team will do a 7min presentation.</font>
+                            <li> Session 2: Each team will do a 7 minute
+                                 presentation (plus 3 minute QA).</font>
                             </li>
                         </ul>
 
@@ -1144,7 +1148,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1: Each team will do a 15min presentation. </li>
+                            <li> Session 1: Each team will do a 10 minute
+                                 presentation (no QA as it is an exam). </li>
                         </ul>
 
                     </td>
@@ -1154,7 +1159,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2: Each team will do a 15min presentation. </li>
+                            <li> Session 2: Each team will do a 10 minute
+                                 presentation (no QA as it is an exam). </li>
                         </ul>
 
                     </td>
