--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -517,9 +517,9 @@
                                 In Proceedings of the 24th ACM Symposium on Operating Systems Principles (SOSP '13), November, 2013.
                                   <p></p>
                                 </li>
-                                <li>M. Attariyan and J. Flinn,
-                                <a class="paperlink" href="http://lethe.eecs.umich.edu/papers/confaid.pdf" target="_blank">Automating configuration troubleshooting with dynamic information flow analysis</a>,
-                                In Proceedings of the 9th USENIX Conference on Operating Systems Design and Implementation (OSDI '10), October 2010.
+                                <li>Y-. Y. Su, M. Attariyan and J. Flinn,
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=1294284" target="_blank">AutoBash: Improving configuration management with operating system causality analysis</a>,
+                                In Proceedings of the 21st ACM Symposium on Operating Systems Principles (SOSP '07), October 2007.
                                   <p></p>
                                 </li>
                                 <li> H. J. Wang, J. C. Platt, Y. Chen, R. Zhang, and Y-. M. Wang,
