--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -611,6 +611,18 @@
                                 Site Reliability Engineering: How Google Runs Production Systems,
                                 O'Reilly, April 2016.
                           </li>
+                          <li> (Optional) X-ray and PCatch are built on top of the following papers:
+                               <p></p>
+                            <ul>
+                                <li> A. F. Cuervo,
+                                  <a class="paperlink" href="https://landing.google.com/sre/book/chapters/handling-overload.html" target="_blank">
+                                    Handling Overload </a>,
+                                    Site Reliability Engineering: How Google Runs Production Systems,
+                                    O'Reilly, April 2016.
+                                  <p></p>
+                                </li>
+                            </ul>
+                          </li>
                       </ul>
                   </td>
               </tr>
