--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -550,7 +550,7 @@
                             </li>
                             <li> K. Nagaraja, F. Oliveira, R. Bianchini,
                                  R. P. Martin, and T. D. Nguyen,
-                                <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/hotos17-scalabilityBugs.pdf" target="_blank">Understanding
+                                <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/naragaraja/naragaraja.pdf" target="_blank">Understanding
                                   and Dealing with Operator Mistakes in Internet
                                   Services</a>,
                                   In Proceedings of the 6th Symposium on Operating
@@ -617,7 +617,7 @@
                             <ul>
                                 <li> A. F. Cuervo,
                                   <a class="paperlink" href="https://landing.google.com/sre/book/chapters/handling-overload.html" target="_blank">
-                                    Handling Overload </a>,
+                                    Handling Overload</a>,
                                     Site Reliability Engineering: How Google Runs Production Systems,
                                     O'Reilly, April 2016.
                                   <p></p>
