--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -568,7 +568,7 @@
                               <ul>
                                   <li> D. A. Patterson et al.,
                                     <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/ROC_TR02-1175.pdf" target="_blank">
-                                      Recovery Oriented Computing (ROC): Motivation, Definition, Techniques, and Case Studies </a>,
+                                      Recovery Oriented Computing (ROC): Motivation, Definition, Techniques, and Case Studies</a>,
                                       Tech Report UCB//CSD-02-1175, University of California Berkeley, March 2002.
                                       (<a class="paperlink" href="http://roc.cs.berkeley.edu/" target="_blank">the ROC project website</a>)
                                     <p></p>
@@ -612,7 +612,7 @@
                                 O'Reilly, April 2016.
                                 <p></p>
                           </li>
-                          <li> (Optional) X-ray and PCatch are built on top of the following papers:
+                          <li> (Optional) addressing cascading failures is closely related to handling overload:
                                <p></p>
                             <ul>
                                 <li> A. F. Cuervo,
@@ -660,7 +660,7 @@
                               <ul>
                                   <li> H. Liu, G. Li, J. F. Lukman, J. Li, S. Lu, H. S. Gunawi, and C. Tian,
                                     <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/asplos17-preprint.pdf" target="_blank">
-                                      DCatch: Automatically Detecting Distributed Concurrency Bugs in Cloud Systems </a>,
+                                      DCatch: Automatically Detecting Distributed Concurrency Bugs in Cloud Systems</a>,
                                       In Proceedings of the
                                       22nd ACM International Conference on Architectural Support
                                       for Programming Languages and Operating Systems (ASPLOS '17), April 2017.
