--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -364,17 +364,6 @@
                                   Cloud Computing (SOCC '14), November 2014.
                                   <p></p>
                             </li>
-                            <li> (Optional) related paper on error handling code:
-                                 <p></p>
-                              <ul>
-                                <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
-                                  R. H. Arpaci-Dusseau, and B. Liblit,
-                                <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
-                                In Proceedings of the 6th USENIX Conference on File and Storage Technologies (FAST '08), February 2008.
-                                  <p></p>
-                                </li>
-                              </ul>
-                            </li>
                             <li> (Optional) related bug studies:
                                  <p></p>
                               <ul>
@@ -832,6 +821,14 @@
 
                     <td class="papers">
                         <ul>
+                          <li>
+                            <b>
+                            <a class="paperlink" href="http://kalim2.web.engr.illinois.edu/" target="_blank">Faria</a>
+                            and <a class="paperlink" href="http://bj2.web.engr.illinois.edu/" target="_blank">Beomyeol</a>
+                            will lead the discussion of the two papers.
+                            </b>
+                            <p></p>
+                          </li>
                             <li> C. Candea, S. Kawamoto, Y. Fujiki, G. Friedman, and A. Fox,
                                 <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/candea/candea.pdf" target="_blank">Microreboot – A
                                   Technique for Cheap Recovery</a>,
@@ -843,6 +840,25 @@
                                 <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/nsdi11-fateDestini.pdf" target="_blank">
                                   FATE and DESTINI: A Framework for Cloud Recovery Testing</a>,
                                   In Proceedings of the 8th USENIX Symposium on Networked Systems Design and Implementation (NSDI '11), March 2011.
+                                  <p></p>
+                            </li>
+                            <li> (Optional) related papers:
+                                 <p></p>
+                              <ul>
+                                <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
+                                  R. H. Arpaci-Dusseau, and B. Liblit,
+                                <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
+                                In Proceedings of the 6th USENIX Conference on File and Storage Technologies (FAST '08), February 2008.
+                                  <p></p>
+                                </li>
+                                <li>C. R-. González, H. S. Gunawi, B. Liblit,
+                                  R. H. Arpaci-Dusseau, and
+                                  A. C. Arpaci-Dusseau,
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=1542506" target="_blank">Error Propagation Analysis for File Systems</a>,
+                                In Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation (PLDI '09), June 2009.
+                                  <p></p>
+                                </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
