--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -613,6 +613,28 @@
                                 </li>
                             </ul>
                           </li>
+                          <li> (Optional) papers related to GC:
+                               <p></p>
+                            <ul>
+                                <li> K. Nguyen, L. Fang, G. Xu, B. Demsky, S. Lu,
+                                     S. Alamian, and O. Mutlu,
+                                  <a class="paperlink" href="http://web.cs.ucla.edu/~harryxu/papers/nguyen-osdi16.pdf" target="_blank">
+                                    Yak: A High-Performance Big-Data-Friendly Garbage Collector</a>,
+                                    In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (OSDI '16),
+                                    November 2016.
+                                  <p></p>
+                                </li>
+                                <li> I. Gog, J. Giceva, M. Schwarzkopf, K. Vaswani,
+                                     D. Vytiniotis, G. Ramalingan, M. Costa,
+                                     D. Murray, S. Hand, and M. Isard,
+                                  <a class="paperlink" href="http://web.cs.ucla.edu/~harryxu/papers/nguyen-osdi16.pdf" target="_blank">
+                                    Broom: Sweeping out Garbage Collection from Big Data systems</a>,
+                                    In Proceedings of the 15th Workshop on Hot Topics in Operating Systems (HotOS XV),
+                                    May 2015.
+                                  <p></p>
+                                </li>
+                            </ul>
+                          </li>
                       </ul>
                   </td>
               </tr>
