--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -971,7 +971,7 @@
                   <td class="papers">
                       <ul>
                           <li> P. Huang, C. Guo, J. R. Lorch, and L. Zhou,
-                              <a class="paperlink" href="https://www.usenix.org/conference/osdi18/presentation/huang" target="_blank">Capturing
+                              <a class="paperlink" href="https://www.cs.jhu.edu/~huang/paper/panorama-osdi18.pdf" target="_blank">Capturing
                                 and Enhancing In Situ System Observability for Failure Detection</a>,
                                 In Proceedings of the 13th USENIX Symposium on
                                 Operating Systems Design and
