finalize author list

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1065,7 +1065,7 @@
   Large Scale Web Services</a>, In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (OSDI '16), November 2016.
                                 <p></p>
                             </li>
-                            <li> K. Veeraraghavan, J. Meza, S. Michelson, S. Panneerselvam, A. Gyori, D. Obenshain, Y. J. Song, and T. Xu,
+                            <li> K. Veeraraghavan, J. Meza, S. Michelson, S. Panneerselvam, A. Gyori, D. Chou, S. Margulis, D. Obenshain, S. Padmanabha, A. Shah, Y. J. Song, and T. Xu,
                                  Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently, In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (OSDI '18), October 2018.
                               <p></p>
                             </li>
