--- a/publication.html
+++ b/publication.html
@@ -81,7 +81,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [To appear]
 						<br>
-						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Ashish Shah, Yee Jiun Song, and Tianyin Xu
+						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
 						In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Carlsbad, CA, Oct. 8-10, 2018.
 						</span>
