--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1015,7 +1015,7 @@
       </table>
 
 
-        <h2>Testing Production Systems</h2>
+        <h2>Failure Testing and Chaos Engineering</h2>
 
         <table>
             <tbody>
@@ -1076,6 +1076,13 @@
                         </ul>
                     </td>
                 </tr>
+              </tbody>
+          </table>
+
+          <h2>Load Tests and Drain Tests</h2>
+
+          <table>
+          <tbody>
 
                 <tr>
                     <td class="date"><a name="11th">Thu<br>11/8</a></td>
