--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -865,11 +865,10 @@
                             </b>
                             <p></p>
                           </li>
-                            <li> C. Candea, S. Kawamoto, Y. Fujiki, G. Friedman, and A. Fox,
-                                <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/candea/candea.pdf" target="_blank">Microreboot – A
-                                  Technique for Cheap Recovery</a>,
-                                  In Proceedings of the 6th Symposium on Operating
-                                  Systems Design and Implementation (OSDI '04), December 2004.
+                            <li> F. Qin, J. Tucek, J. Sundaresan, and Y. Zhou
+                                <a class="paperlink" href="http://opera.ucsd.edu/paper/Rx-SOSP05.pdf" target="_blank">Rx:
+                                  Treating Bugs As Allergies -- A Safe Method to Survive Software Failures</a>,
+                                  In Proceedings of the 20th ACM Symposium on Operating Systems Principles (SOSP '05), October 2005.
                                 <p></p>
                             </li>
                             <li> H. S. Gunawi, T. Do, P. Joshi, P. Alvaro, J. M. Hellerstein, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, K. Sen, and D. Borthakur,
@@ -881,6 +880,13 @@
                             <li> (Optional) related papers:
                                  <p></p>
                               <ul>
+                                <li> C. Candea, S. Kawamoto, Y. Fujiki, G. Friedman, and A. Fox,
+                                    <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/candea/candea.pdf" target="_blank">Microreboot – A
+                                      Technique for Cheap Recovery</a>,
+                                      In Proceedings of the 6th Symposium on Operating
+                                      Systems Design and Implementation (OSDI '04), December 2004.
+                                    <p></p>
+                                </li>
                                 <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
                                   R. H. Arpaci-Dusseau, and B. Liblit,
                                 <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
@@ -1147,6 +1153,34 @@
             </tbody>
         </table>
 
+
+        <h2>Tracing</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
+                    <td class="papers">
+                        <ul>
+
+                            <li> J. Mace, R. Roelke, and R. Fonseca,
+                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/122-mace.pdf" target="_blank">Pivot
+        Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
+                                <p></p>
+                            </li>
+                            <li> J. Kaldor, J. Mace, M. Bejda, E. Gao, W. Kuropatwa, J. O'Neill, K. W. Ong, B. Schaller, P. Shan, B. Viscomi, V. Venkataraman, K. Veeraraghavan, and Y. J. Song,
+                                <a class="paperlink" href="https://dl.acm.org/authorize.cfm?key=N47147" target="_blank">Canopy:
+        An End-to-End Performance Tracing And Analysis System</a>, In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
+                                <p></p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+
+
         <h2>Troubleshooting</h2>
 
         <table>
@@ -1175,26 +1209,6 @@
                         </ul>
                     </td>
                 </tr>
-
-                <tr>
-                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
-                    <td class="papers">
-                        <ul>
-
-                            <li> J. Mace, R. Roelke, and R. Fonseca,
-                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/122-mace.pdf" target="_blank">Pivot
-  Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
-                                <p></p>
-                            </li>
-                            <li> J. Kaldor, J. Mace, M. Bejda, E. Gao, W. Kuropatwa, J. O'Neill, K. W. Ong, B. Schaller, P. Shan, B. Viscomi, V. Venkataraman, K. Veeraraghavan, and Y. J. Song,
-                                <a class="paperlink" href="https://dl.acm.org/authorize.cfm?key=N47147" target="_blank">Canopy:
-  An End-to-End Performance Tracing And Analysis System</a>, In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
-                                <p></p>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
             </tbody>
         </table>
 
