--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -880,6 +880,13 @@
                             <li> (Optional) related papers:
                                  <p></p>
                               <ul>
+                                <li> M. Rinard, C. Cadar, D. Dumitran, D. M. Roy, T. Leu, and W. S. Beebee Jr,
+                                    <a class="paperlink" href="https://www.eng.utah.edu//~csl-sem/old/s05/papers/rinard.pdf" target="_blank">Enhancing
+                                      Server Availability and Security Through Failure-Oblivious Computing</a>,
+                                      In Proceedings of the 6th Symposium on Operating
+                                      Systems Design and Implementation (OSDI '04), December 2004.
+                                    <p></p>
+                                </li>
                                 <li> C. Candea, S. Kawamoto, Y. Fujiki, G. Friedman, and A. Fox,
                                     <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/candea/candea.pdf" target="_blank">Microreboot – A
                                       Technique for Cheap Recovery</a>,
