--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -812,7 +812,7 @@
                                 In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
                                 <p></p>
                             </li>
-                            <li> P. D. Marinescu, R. Banabic, and G. Candea,
+                            <li> (Tentative) P. D. Marinescu, R. Banabic, and G. Candea,
                                 <a class="paperlink" href="https://www.usenix.org/legacy/event/usenix10/tech/full_papers/Marinescu.pdf" target="_blank">An Extensible Technique for High-Precision Testing of Recovery Code</a>,
                                 In Proceedings of the 2010 USENIX Annual Technical Conference (USENIX ATC '10), June 2010.
                                 <p></p>
