--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1178,10 +1178,13 @@
                     <td class="date"><a name="13th">Thu<br>11/29</a></td>
                     <td class="papers">
                         <ul>
-
+                          <li>
+                              <b><a class="paperlink" href="https://www.linkedin.com/in/ali-kheradmand-4109b939/" target="_blank">Ali</a> will lead the discussion of Pivot Tracing.</b>
+                              <p></p>
+                          </li>
                             <li> J. Mace, R. Roelke, and R. Fonseca,
                                 <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/122-mace.pdf" target="_blank">Pivot
-        Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
+                                    Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP '15), October 2015.
                                 <p></p>
                             </li>
                             <li> J. Kaldor, J. Mace, M. Bejda, E. Gao, W. Kuropatwa, J. O'Neill, K. W. Ong, B. Schaller, P. Shan, B. Viscomi, V. Venkataraman, K. Veeraraghavan, and Y. J. Song,
